Sync info (e.g. ID) between Camera SBC and MCU Pi fetches any info stored on MCU - Camera ID - Firmware version and descriptor - Hardware serial, descriptor, potential subpart serials Pi then may update ID stored in MCU if desired Will use both flash for id/config, and OTP for hardware data - Currently hardware data also uses flash, will switch later - Now certain to need 64KB flash, so updated linker file

--- a/camera_mcu/Makefile
+++ b/camera_mcu/Makefile
@@ -46,6 +46,7 @@ source/main.c \
 source/rgbled.c \
 source/rgbled_anims.c \
 source/version.c \
+source/otp.c \
 targets/ARM/source/config_arm_ll.c \
 targets/ARM/source/uart_arm_ll.c \
 targets/ARM/source/i2c_arm_ll.c \
@@ -95,7 +96,7 @@ ASM_SOURCES = $(ASM_SOURCES_$(DEVICE))
 
 # ----- Link script -----
 
-LDSCRIPT_STM32G030 = targets/ARM/link_STM32G030K6Tx.ld
+LDSCRIPT_STM32G030 = targets/ARM/link_STM32G030K8Tx.ld
 LDSCRIPT = $(LDSCRIPT_$(DEVICE))
 
 
