Added simple packaging and install scripts Added basic packaging script for easier, reliable distribution Added install script to packaged output: - Put program files in common linux locations - Prepare and install .desktop file for desktop integration It is not fully integrating with the system yet - It still just writes config/output to hardcoded paths in the installl directory - That's why system installation doesn't work yet

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -8,6 +8,7 @@ build/
 debian-external/
 debian-internal/
 debootstrap/
+package/
 
 # Temporary Outputs
 log.txt
@@ -15,13 +16,14 @@ log_1.txt
 log_2.txt
 imgui.ini
 imgui_log.txt
+*.tar.gz
 # Permanent Outputs
 store
 dump
 
 # Unnecessary sources
-resources/*.xcf
-resources/*.svg
+resources/icons/*.svg
+resources/icons/*.xcf
 
 # Dependency build cache
 dependencies/buildfiles/*/linux
