Improved developer experience with both LSPs Added clangd LSP support on windows Improved Microsoft C++ LSP support on both windows and linux - Not actually sure if it uses compile_commands.json properly... - Exact defines of c_cpp_properties are still barely maintained

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -11,6 +11,13 @@
 			"program": "${workspaceFolder}/build/astertrack.exe",
 			"cwd": "${workspaceFolder}"
 		},
+		{ // Uses CodeLLDB extension, MUCH faster debugging experience using LLDB
+			"name": "Windows CodeLLDB",
+			"type": "lldb",
+			"request": "launch",
+			"program": "${workspaceFolder}/build/astertrack.exe",
+			"cwd": "${workspaceFolder}"
+		},
 		{ // Uses Microsoft C/C++ extension, very slow debugging experience with GDB
 			"name": "Linux GDB MS CPP",
 			"type": "cppdbg",
