--- a/server/.vscode/extensions.json
+++ b/server/.vscode/extensions.json
@@ -8,5 +8,7 @@
 		"vadimcn.vscode-lldb"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
-	"unwantedRecommendations": []
+	"unwantedRecommendations": [
+		"ms-vscode.makefile-tools"
+	]
 }
