Fixed windows regressions and improved support Fixed all windows compile errors Updated libusb to a version that supports newest MSVC compiler Updated dependency build scripts to more properly pick correct CRT to use - Previous attempts were hacks since neither CMake not MSBuild make it easy - Relying on a libusb config, and a specific cmake version / policy for glfw and vrpn Updated and improved CMake build system used only for windows - Attempted to add more instrumented configurations, but not easy to get to work with both cmake and msvc Fixed all compilation and linking errors on windows - Most annoyingly, emplace_back requires an explicit constructor on MSVC for some reason... Switched to UTF-8 on windows, too - Previously attempted to use "native" Unicode/UTF-16 - Now using UTF-8 on all platforms consistently

--- a/server/Makefile
+++ b/server/Makefile
@@ -48,7 +48,7 @@ else ifeq ($(COMPILER), clang-std)
 CXX=clang++
 CC=clang
 LD=clang++
-# gnu libraries (libstdc++ + libgomp)
+# gnu library (libstdc++) but using clangs libomp (libgomp config stopped working)
 cstd = -stdlib=libstdc++ -fopenmp=libomp -Wno-gcc-compat
 lstd = -lstdc++ -fopenmp=libomp --rtlib=libgcc -latomic
 lto = -flto=thin
@@ -194,7 +194,7 @@ cflags = $(cenv) -Idependencies/include -Idependencies/sources \
 cxxflags = $(cflags) $(cstd) -I$(src) -I$(sh) -I$(dep)/imgui \
 	-DEIGEN_MPL2_ONLY -D_FILE_OFFSET_BITS=64 \
 	-Wno-deprecated-enum-enum-conversion -Wno-unknown-attributes \
-	-D_UNICODE -DEIGEN_NO_AUTOMATIC_RESIZING -DEIGEN_INITIALIZE_MATRICES_BY_NAN \
+	-DEIGEN_NO_AUTOMATIC_RESIZING -DEIGEN_INITIALIZE_MATRICES_BY_NAN \
 	-DBLOB_EMULATION \
 	-std=c++23 -ffp-contract=fast
 lflags = $(lenv) -Wl,-rpath='$$ORIGIN' $(lstd) $(lmode) $(march)
