--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -17,20 +17,21 @@ endif()
 
 # Accumulate sources
 set(SERVER
-	app.cpp server.cpp config.cpp simulation.cpp version.cpp
+	app.cpp server.cpp config.cpp simulation.cpp recording.cpp version.cpp
 	comm/usb.cpp comm/protocol_packet.cpp comm/streaming.cpp
 	comm/wireless_server.cpp
-	device/tracking_device.cpp device/parsing.cpp
-	io/vrpn.cpp
+	device/tracking_controller.cpp device/tracking_camera.cpp
+	device/parsing.cpp device/camera_firmware.cpp device/controller_firmware.cpp
+	io/vrpn.cpp io/vrpn_imu.cpp
+	imu/trackerAsterTrack.cpp imu/trackerSlimeVR.cpp imu/remoteIMU.cpp
 	pipeline/pipeline.cpp pipeline/pipeline_tracking.cpp
 	pipeline/pipeline_calibration_point.cpp pipeline/pipeline_calibration_target.cpp
 	calib/obs_data.cpp calib/optimisation.cpp
 	calib_point/reconstruction.cpp calib_point/calibration_room.cpp
 	calib_target/reconstruction.cpp calib_target/aquisition.cpp calib_target/assembly.cpp
-	point/sequence_data.cpp
-	point/sequences2D.cpp point/triangulation.cpp point/tracking3D.cpp
-	target/target.cpp target/detection2D.cpp target/detection3D.cpp
-	target/tracking2D.cpp target/tracking3D.cpp
+	point/sequence_data.cpp point/sequences2D.cpp point/triangulation.cpp
+	target/target.cpp target/detection2D.cpp target/detection3D.cpp target/tracking2D.cpp
+	tracking/cluster.cpp tracking/tracking.cpp
 )
 set(SERVER_SHARED
 	util/timesync.cpp
@@ -38,6 +39,12 @@ set(SERVER_SHARED
 	hash/crc32.cpp
 	hash/sha256.cpp
 	comm/protocol_stream.cpp
+)
+set(SERVER_DEP
+	recursive_shared_mutex/recursive_shared_mutex.cpp
+	poselib/p3p_ding.cpp
+	dbscan/dbscan.cpp
+	hidapi/windows/hid.c
 )
 set(INTERFACE
 	ui/ui.cpp ui/menu.cpp
@@ -56,9 +63,9 @@ set(INTERFACE
 	emulation/detection.cpp
 )
 set(INTERFACE_SHARED
-	blob/refinement.cpp blob/blob.cpp
+	blob/blob.cpp blob/refinement.cpp
 )
-set(DEPENDENCIES
+set(INTERFACE_DEP
 	imgui/imgui.cpp imgui/imgui_draw.cpp
 	imgui/imgui_widgets.cpp imgui/imgui_tables.cpp
 	imgui/backends/imgui_impl_glfw.cpp imgui/backends/imgui_impl_opengl3.cpp
@@ -66,12 +73,10 @@ set(DEPENDENCIES
 	imgui/imgui_demo.cpp
 	imguizmo/ImSequencer.cpp
 	implot/implot.cpp implot/implot_items.cpp implot/implot_demo.cpp
-	recursive_shared_mutex/recursive_shared_mutex.cpp
-	poselib/p3p_ding.cpp
-	dbscan/dbscan.cpp
 	GL/glew.c
 	stb/stb_image.c
 )
+
 set(SOURCES_FILES "")
 foreach(it ${SERVER})
 	list(APPEND SOURCES_FILES "${PROJECT_SOURCE_DIR}/source/${it}")
@@ -79,13 +84,16 @@ endforeach()
 foreach(it ${SERVER_SHARED})
 	list(APPEND SOURCES_FILES "${PROJECT_SOURCE_DIR}/../shared/${it}")
 endforeach()
+foreach(it ${SERVER_DEP})
+	list(APPEND SOURCES_FILES "${PROJECT_SOURCE_DIR}/dependencies/sources/${it}")
+endforeach()
 foreach(it ${INTERFACE})
 	list(APPEND SOURCES_FILES "${PROJECT_SOURCE_DIR}/source/${it}")
 endforeach()
 foreach(it ${INTERFACE_SHARED})
 	list(APPEND SOURCES_FILES "${PROJECT_SOURCE_DIR}/../shared/${it}")
 endforeach()
-foreach(it ${DEPENDENCIES})
+foreach(it ${INTERFACE_DEP})
 	list(APPEND SOURCES_FILES "${PROJECT_SOURCE_DIR}/dependencies/sources/${it}")
 endforeach()
 
@@ -103,9 +111,9 @@ target_include_directories(astertrack PRIVATE "${PROJECT_SOURCE_DIR}/dependencie
 target_compile_features(astertrack PRIVATE cxx_generalized_initializers cxx_static_assert cxx_std_20)
 
 # Specify definitions
-target_compile_definitions(astertrack PUBLIC GLEW_STATIC _UNICODE
+target_compile_definitions(astertrack PUBLIC GLEW_STATIC
 	EIGEN_MPL2_ONLY EIGEN_NO_AUTOMATIC_RESIZING EIGEN_INITIALIZE_MATRICES_BY_NAN BLOB_EMULATION)
-target_compile_definitions(astertrack PUBLIC $<$<CONFIG:Debug>:_DEBUG>)
+target_compile_definitions(astertrack PUBLIC $<$<CONFIG:Debug>:_DEBUG -DLOG_MAX_LEVEL_DEFAULT=LTrace>)
 target_compile_definitions(astertrack PUBLIC $<$<CONFIG:Release>:NDEBUG EIGEN_NO_DEBUG>)
 
 # Disable linking of default system libraries, do it explicitly later
@@ -116,30 +124,37 @@ set(CMAKE_CXX_STANDARD_LIBRARIES "")
 if(MSVC)
 	set(PLT_LIB_DIR "${PROJECT_SOURCE_DIR}/dependencies/lib/win")
 
+	# Platform-specific compilation units
+	target_sources(astertrack PRIVATE ${PROJECT_SOURCE_DIR}/dependencies/sources/nativefiledialog-extended/nfd_win.cpp)
+
 	# MSVC-specific compiler setup
 	target_compile_definitions(astertrack PUBLIC _CRT_SECURE_NO_WARNINGS _USE_MATH_DEFINES _ENABLE_EXTENDED_ALIGNED_STORAGE INTERFACE_LINKED)
-	target_compile_options(astertrack PUBLIC -nologo -bigobj -EHsc -W1)
+	target_compile_options(astertrack PUBLIC -nologo -bigobj -EHsc -W1 -utf-8)
 	target_link_options(astertrack PUBLIC -subsystem:windows -ENTRY:mainCRTStartup) # re-route GUI entry point to main
 #	target_compile_options(astertrack PUBLIC "-Wall -wd4477")
-	target_compile_options(astertrack PUBLIC "/wd4348")
+	target_compile_options(astertrack PUBLIC "-wd4348")
+	target_compile_options(astertrack PUBLIC "-wd4068")
 
-	# And because libusb defaults to /MD and msbuild does not allow you to override it, libusb is built with wrong runtime libs
+	# And because libusb defaults to -MD and msbuild does not allow you to override it, libusb is built with wrong runtime libs
 	# Need to force linker to use this now
 	# Update: Forcefully overrode setting with environment variable for libusb build, so this workaround is not needed anymore
-	#target_link_options(astertrack PUBLIC /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcprt.lib)
+	#target_link_options(astertrack PUBLIC -NODEFAULTLIB:msvcrt.lib -NODEFAULTLIB:msvcprt.lib)
 
 	# Configuration-specific setup
 	# Gave up on windows dual Release/Debug builds, support for that is lackluster in CMake at best
 	if(CMAKE_BUILD_TYPE STREQUAL Debug)
 		set(LIB_DIR ${PLT_LIB_DIR}/debug)
-		target_compile_options(astertrack PUBLIC -MTd -Z7 -O2)
-		set(MSVC_RUNTIME_LIBRARY MultiThreadedDebug)
-		STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
-		STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
+		# Address Sanitizer just crashes outright (even with dependencies built using it)
+		# Some of the harsh restrictions could not be met, like no OpenMP, and perhaps some others I missed
+		#set(SAN -Od -fsanitize=address)
+		set(SAN -RTCsu)
+		#set(SAN -O2)
+		target_compile_options(astertrack PUBLIC -Z7 -Zi ${SAN})
+		set_target_properties(astertrack PROPERTIES MSVC_RUNTIME_LIBRARY MultiThreadedDebug)
 	else()
 		set(LIB_DIR ${PLT_LIB_DIR}/release)
-		target_compile_options(astertrack PUBLIC -MT -O2)
-		set(MSVC_RUNTIME_LIBRARY MultiThreaded)
+		target_compile_options(astertrack PUBLIC -O2)
+		set_target_properties(astertrack PROPERTIES MSVC_RUNTIME_LIBRARY MultiThreaded)
 	endif()
 
 	# Find local libraries
@@ -163,7 +178,7 @@ if(MSVC)
 
 	# Link libraries
 	target_link_libraries(astertrack ${LIB_VRPN} ${LIB_TJPEG} ${LIB_GLFW} ${LIB_LUSB})
-	target_link_libraries(astertrack opengl32 gdi32.lib shell32.lib)
+	target_link_libraries(astertrack opengl32 gdi32 shell32 advapi32 ole32)
 
 	# Add windows-specific resource file
 	target_sources(astertrack PRIVATE "${PROJECT_SOURCE_DIR}/resources/conf.rs")
@@ -176,15 +191,11 @@ if(MSVC)
 	add_custom_command(TARGET astertrack POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different
 		"${LIB_DIR}/libusb/libusb-1.0.dll" $<TARGET_FILE_DIR:astertrack>)
 
-	# Force rebuild of version which includes a build indentifier
-	add_custom_target(
-		recompile_info
-		COMMAND copy /b ${CMAKE_CURRENT_SOURCE_DIR}/source/version.cpp +,,
-	)
-	add_dependencies(astertrack recompile_info)
-
 else()
 	set(LIB_DIR "${PROJECT_SOURCE_DIR}/dependencies/lib/linux")
+
+	# Platform-specific compilation units
+	target_sources(astertrack PRIVATE ${PROJECT_SOURCE_DIR}/dependencies/sources/nativefiledialog-extended/nfd_portal.cpp)
 
 	# gcc-specific compiler setup for Debug and Release
 	target_compile_definitions(astertrack PUBLIC GLEW_EGL _FILE_OFFSET_BITS=64)
@@ -210,11 +221,11 @@ else()
 	else() # GCC
 	endif()
 
-	# Force rebuild of version which includes a build indentifier
-	add_custom_target(
-		recompile_info
-		COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/source/version.cpp
-	)
-	add_dependencies(astertrack recompile_info)
-
 endif()
+
+# Force rebuild of version which includes a build indentifiercma
+add_custom_target(
+	recompile_info
+	COMMAND ${CMAKE_COMMAND} -E touch "${CMAKE_CURRENT_SOURCE_DIR}/source/version.cpp"
+)
+add_dependencies(astertrack recompile_info)
