Added proper manifest for windows desktop integration Added embedded resource file to replace previous wxWidgets one - Set desktop icon to use across windows - Set version info and program name Added embedded manifest for desktop integration config: - UTF-8 encoding for output - (DISABLED) Per Monitor DPI support
GLFW DPI support is different on windows, requiring explicit support by Dear ImGui which is still incomplete
- Once that exists, set dpiAware to 'true/pm', and dpiAwareess to 'PerMonitorV2, system'

In the future, build system should centrally update version info across files:
- version.cpp (or indirectly by including astertrack_version.rc)
- resources/astertrack_version.rc (can be written, included by resource file)
- resources/astertrack.manifest (has version, but not important afaik)
Currently, build-number is randomised during compilation, may need to be put in pre-build-script for server only

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -181,7 +181,8 @@ if(MSVC)
 	target_link_libraries(astertrack opengl32 gdi32 shell32 advapi32 ole32)
 
 	# Add windows-specific resource file
-	target_sources(astertrack PRIVATE "${PROJECT_SOURCE_DIR}/resources/conf.rs")
+	target_sources(astertrack PRIVATE "${PROJECT_SOURCE_DIR}/resources/astertrack.rc")
+	target_sources(astertrack PRIVATE "${PROJECT_SOURCE_DIR}/resources/astertrack.manifest")
 
 	# Prevent MSVC from putting it in /Debug or /Release subdirectories
 	set_target_properties(astertrack PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR})
